# mrs

./: 404.html  Makefile  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  docs_dev.yml
docs/: index.md  rotations.md
example_figure/: index.html
gauss_principle/: index.html
notebooks/: adjust_figure_bbox.ipynb  rotations_tests.ipynb
rotations/: index.html
src/mrs/: frames.py  vizu.py
src/mrs/figs/: Makefile  README.md  example_figure.py  rot_sequences.py
