[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mrs"
version = "0.1.0"
description = "Meetup robotic simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "zensical>=0.0.15",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
]
